# learn_slack_emoji_completion

./: .gitignore  README.md  pyproject.toml  train.py  train_classifier.py
data/:  .txt  0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  a.txt  b.txt  c.txt  candidates.txt  d.txt  e.txt  f.txt  g.txt  h.txt  i.txt  j.txt  k.txt  l.txt  m.txt  n.txt  o.txt  p.txt  q.txt  r.txt  s.txt  t.txt  u.txt  v.txt  w.txt  x.txt  y.txt  z.txt
emojicompletion/: data.py  model.py
notebooks/: 20220627_evaluate.ipynb  20220704_hand_feature.ipynb
