[tool.poetry]
name = "learn_slack_emoji_completion"
version = "0.1.0"
description = ""
authors = ["Hi-king <hikingko1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.11.0"
fire = "^0.4.0"
numpy = "^1.22.4"
scikit-learn = "^1.1.1"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]
yapf = "^0.32.0"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
