[tool.poetry]
name = "learn_slack_emoji_completion"
version = "0.1.0"
description = ""
authors = ["Hi-king <hikingko1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.11.0"
fire = "^0.4.0"
numpy = "^1.22.4"
scikit-learn = "^1.1.1"
tqdm = "^4.64.0"
more-itertools = "^8.13.0"
pandas = "^1.4.3"
wandb = "^0.12.20"
python-Levenshtein = "^0.12.2"

[tool.poetry.dev-dependencies]
yapf = "^0.32.0"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.17.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
